--- a/EmployeeDB/src/main/resources/application.properties
+++ b/EmployeeDB/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employeedb
 spring.datasource.username=root 
 spring.datasource.password=mysql
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
